--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -10,6 +10,8 @@
   color: #125159;
   -webkit-text-stroke: 1px #DFE5E6;
   font-size: 32px;
+  top: 40%;
+  bottom: 60%;
 }
 
 /* Info Web Desa Section */
