--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -43,3 +43,38 @@
   line-height: 18px;
   color: #000000;
 } */
+.page-title {
+  color: #125159;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 48px;
+  font-size: 32px;
+}
+
+.sub-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+  color: #000;
+}
+
+.card-text {
+  font-style: normal;
+  font-weight: 700;
+  line-height: 48px;
+  color: #125159;
+}
+
+.title-text{
+  font-size: 32px;
+  -webkit-text-stroke: 1px #DFE5E6;
+}
+
+.nama{
+  font-size:25px;
+}
+
+.jabatan{
+  font-size:20px;
+}
