--- a/assets/css/berita.css
+++ b/assets/css/berita.css
@@ -9,7 +9,6 @@
   .left {
     font-style: normal;
     font-weight: 600;
-    font-size: 32px;
     line-height: 48px;
   }
   
@@ -17,8 +16,15 @@
     color: #346A70;
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
     line-height: 24px;
+  }
+  
+  .right:hover {
+    color: #346a70;
+  }
+  
+  .card-img-top {
+    border-radius: 20px;
   }
   
   .card-img-top {
