--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -81,10 +81,11 @@
 
   .form-btn{
     position: absolute;
+    font-size: 1.5vw;
     right: 10vw;
     color: #FFFFFF;
-    width: 144px;
-    height: 61px;
-    border-radius: 15px;
+    width: 7vw;
+    height: 3.5vw;
+    border-radius: 1vw;
     background-color: #125159;
   }
