--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -54,21 +54,9 @@ navbar-menu {
   color: #DFE5E6;
 }
 
-@media screen and (max-width: 500px) {
-  span.navbar-title {
-    font-size: 1.9vh;
-  }
-}
-
-@media screen and (max-width: 720px) {
-  span.navbar-title {
-    font-size: 2.8vh;
-  }
-}
-
 @media screen and (max-width: 1000px) {
   span.navbar-title {
-    font-size: 3vh;
+    font-size: 2.2vw !important;
   }
 }
 
