--- a/assets/css/berita.css
+++ b/assets/css/berita.css
@@ -1,36 +1,54 @@
 .page-title {
-    color: #125159;
-    font-weight: 600;
-    font-style: normal;
-    line-height: 48px;
-    font-size: 32px;
+  color: #125159;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 4vh;
+}
+
+@media only screen and (max-width: 400px) {
+  .page-title {
+    font-size: 2.3vh;
+    margin-left: -40px;
   }
 
-  .left {
-    font-style: normal;
-    font-weight: 600;
-    line-height: 48px;
+  .has-search {
+    margin-top: 20px;
+    margin-left: 20px;
   }
-  
-  .right {
-    color: #346A70;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-  }
-  
-  .right:hover {
-    color: #346a70;
-  }
-  
-  .card-img-top {
-    border-radius: 20px;
-  }
-  
-  .card-img-top {
-    border-radius: 20px;
-  }
+}
 
-  .card-header{
-    height:225px;
-  }
+.left {
+  font-style: normal;
+  font-weight: 600;
+  line-height: 48px;
+}
+
+.right {
+  color: #346A70;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.right:hover {
+  color: #346a70;
+}
+
+.card-img-top {
+  border-radius: 20px;
+}
+
+.card-img-top {
+  border-radius: 20px;
+}
+
+.card-header {
+  height: 225px;
+}
+
+input[type="text"] {
+  border: 1.5px solid #909A9B;
+  border-radius: 40px;
+  color: #909A9B;
+  padding: 1vh;
+}
