--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -15,42 +15,22 @@
 }
 
 .card-img-overlay {
-    padding-top: 28vh;
+    padding-top: calc(20vw - 7vh);
     font-size: 2vw;
 }
 
 .card-img-overlay .card-text {
     font-weight: 700;
-    line-height: 48px;
     color: #125159;
     -webkit-text-stroke: 1px #DFE5E6;
 }
 
-@media only screen and (max-width: 720px) {
+@media screen and (max-width:800px) {
     .card-img-overlay {
-        padding-top: 1vh;
-        font-size: 3px;
+        font-size: 13px !important;
     }
-}
-
-@media only screen and (max-width: 950px) {
-    .card-img-overlay {
-        padding-top: 10vh;
-        font-size: 2vw;
-    }
-}
-
-@media only screen and (max-width: 1180px) {
-    .card-img-overlay {
-        padding-top: 15vh;
-        font-size: 2vw;
-    }
-}
-
-@media only screen and (max-width: 1310px) {
-    .card-img-overlay {
-        padding-top: 20vh;
-        font-size: 2vw;
+    #img-text{
+        -webkit-text-stroke: 0px !important;
     }
 }
 
@@ -113,6 +93,13 @@ button.slick-prev .slick-next {
 #tulisan-petadesa {
     font-weight: 600;
     line-height: 48px;
+}
+
+@media screen and (max-width:800px) {
+    .test{
+        width: 60vw;
+        height: auto;
+    }
 }
 
 
