--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,48 +1,3 @@
-/* .title {
-  color: #125159;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 48px;
-}
-
-.village-office {
-  opacity: 0.5;
-  border-radius: 30px 30px 30px 0px;
-}
-
-.centered-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 48px;
-  text-align: center;
-  -webkit-text-stroke: 1px #FFFFFF;
-}
-
-#structural {
-  margin-top: 200px;
-  margin-bottom: 300px;
-}
-
-#person-name {
-  font-style: normal;
-  font-weight: 700;
-  line-height: 22px;
-  color: #000000;
-  font-size: 15px;
-}
-
-#position {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 18px;
-  color: #000000;
-} */
 .page-title {
   color: #125159;
   font-weight: 600;
@@ -77,5 +32,74 @@
 @media screen and (max-width:800px) {
   .title-text {
     font-size: 13px !important;
+  }
+}
+
+h1 {
+  margin: 0;
+  font-size: 4.5em;
+  padding: 0;
+  color: white;
+  text-shadow: 0 0.1em 20px rgba(0, 0, 0, 1), 0.05em -0.03em 0 rgba(0, 0, 0, 1), 0.05em 0.005em 0 rgba(0, 0, 0, 1), 0em 0.08em 0 rgba(0, 0, 0, 1), 0.05em 0.08em 0 rgba(0, 0, 0, 1), 0px -0.03em 0 rgba(0, 0, 0, 1), -0.03em -0.03em 0 rgba(0, 0, 0, 1), -0.03em 0.08em 0 rgba(0, 0, 0, 1), -0.03em 0 0 rgba(0, 0, 0, 1);
+}
+
+@media screen and (max-width:500px) {
+  h1 {
+    font-size: 2em !important;
+  }
+
+  h1 #first {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  h1 #second {
+    content: "\a";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+h1 span {
+  transform: scale(0.9);
+  display: inline-block;
+}
+
+h1 span:nth-child(1) {
+  animation: bop 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+}
+
+h1 span:nth-child(2) {
+  animation: bopB 1s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+
+}
+
+h1 span:nth-child(3) {
+  animation: bopB 1s 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+}
+
+h1 span:nth-child(4) {
+  animation: bopB 1s 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards infinite alternate;
+}
+
+@keyframes bop {
+  0% {
+    transform: scale(0.9);
+  }
+
+  50%, 100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes bopB {
+  0% {
+    transform: scale(0.9);
+  }
+
+  80%, 100% {
+    transform: scale(1) rotateZ(-3deg);
   }
 }
