--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -117,7 +117,7 @@ h1 span:nth-child(4) {
     position: relative;
     margin: 300px auto 0;
     background: #DFE5E6;
-    padding: 2rem;
+    padding: 2rem 2rem 1rem 2rem;
     border-radius: 50px;
 }
 
