--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -47,23 +47,27 @@ h1 {
     h1 {
         font-size: 3em !important;
     }
+
     h1 #first {
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     h1 #second {
         content: "\a";
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     h1 #third {
         content: "\a";
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     h1 #four {
         content: "\a";
         display: flex;
@@ -97,6 +101,7 @@ h1 span:nth-child(4) {
     0% {
         transform: scale(0.9);
     }
+
     50%,
     100% {
         transform: scale(1);
@@ -107,6 +112,7 @@ h1 span:nth-child(4) {
     0% {
         transform: scale(0.9);
     }
+
     80%,
     100% {
         transform: scale(1) rotateZ(-3deg);
@@ -127,27 +133,9 @@ h1 span:nth-child(4) {
     position: absolute;
     left: -2px;
     top: -2px;
-    background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000);
-    background-size: 400%;
+    border: 1px solid #0000ff;
     width: calc(100% + 4px);
     height: calc(100% + 4px);
     z-index: -1;
-    animation: steam 20s linear infinite;
     border-radius: 50px;
-}
-
-@keyframes steam {
-    0% {
-        background-position: 0 0;
-    }
-    50% {
-        background-position: 400% 0;
-    }
-    100% {
-        background-position: 0 0;
-    }
-}
-
-.block:after {
-    filter: blur(50px);
 }
