--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -130,4 +130,123 @@ footer {
 }
 
 
+/* Pop Up Gambar */
+
+#images {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#images:hover {
+    opacity: 0.7;
+}
+
+
+/* The Modal (background) */
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 15%;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.75);
+    /* Black w/ opacity */
+}
+
+
+/* Modal Content (image) */
+
+.modal-content {
+    margin: auto;
+    display: block;
+    transform: scale(2);
+    width: auto;
+    height: auto;
+    max-width: 600px;
+    max-height: 300px;
+    background-color: transparent;
+}
+
+
+/* Add Animation */
+
+.modal-content {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(2)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(2)
+    }
+}
+
+
+/* The Close Button */
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* 100% Image Width on Smaller Screens */
+
+@media only screen and (max-width: 500px) {
+    .modal-content {
+        margin-top: 60%;
+        width: auto;
+        height: auto;
+        max-height: 350px;
+        max-width: 175px;
+        transform: scale(2);
+        background-color: transparent;
+    }
+    .close {
+        margin-top: 10%;
+    }
+}
+
+
 /* End of FOOTER */
